# Zadanie1

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/header/: ArcGraph.hpp  IGraph.hpp  ListGraph.hpp  MatrixGraph.hpp  SetGraph.hpp  otherFunc.hpp
lib/src/: ArcGraph.cpp  IGraph.cpp  ListGraph.cpp  MatrixGraph.cpp  SetGraph.cpp  otherFunc.cpp
src/: main.cpp
